--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,12 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog spot</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla dolore maiores odit! Exercitationem, dolore? Temporibus odio mollitia earum nostrum iste.</p>                
+            </div>
+        </div>
+        
     </body>
 </html>
