--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog <span id="tagline">tu blog de cabecera</span> 
             </div>
             <div id="post">
                 <h1>Lorem ipsum dolor sit amet.</h1>
