--- a/blogspot.html
+++ b/blogspot.html
@@ -5,17 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Bienvenido a Hyperlog 2.0</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/estilos2.css">
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">tu blog de cabecera</span> 
+                <img id="logo" src="imagenes/dragon.png">
+                Hyperblog 
+                <span id="tagline">tu blog de cabecera</span> 
             </div>
             <div id="post">
                 <h1>Lorem ipsum dolor sit amet.</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla dolore maiores odit! Exercitationem, dolore? Temporibus odio mollitia earum nostrum iste.</p> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic cum consequatur eaque, iusto distinctio numquam molestias sed culpa delectus nam suscipit voluptatum minima incidunt illo laudantium provident necessitatibus maiores? Reprehenderit optio excepturi libero quas voluptate, nemo numquam dolor modi, accusamus odit incidunt suscipit amet sed debitis! Ab sint laborum molestiae.</p>               
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic cum consequatur eaque, iusto distinctio numquam molestias sed culpa delectus nam suscipit voluptatum minima incidunt illo laudantium provident necessitatibus maiores? Reprehenderit optio excepturi libero quas voluptate, nemo numquam dolor modi, accusamus odit incidunt suscipit amet sed debitis! Ab sint laborum molestiae.</p>   
+                <p>Lorem, ipsum dolor.</p>            
             </div>
         </div>
         
