--- a/blogspot.html
+++ b/blogspot.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +16,8 @@
             </div>
             <div id="post">
                 <h1>Lorem ipsum dolor sit amet.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla dolore maiores odit! Exercitationem, dolore? Temporibus odio mollitia earum nostrum iste.</p> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic cum consequatur eaque, iusto distinctio numquam molestias sed culpa delectus nam suscipit voluptatum minima incidunt illo laudantium provident necessitatibus maiores? Reprehenderit optio excepturi libero quas voluptate, nemo numquam dolor modi, accusamus odit incidunt suscipit amet sed debitis! Ab sint laborum molestiae.</p>   
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla dolore maiores odit! Exercitationem, dolore? Temporibus odio mollitia earum nostrum iste!!!.</p> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic cum consequatur eaque, iusto distinctio numquam molestias sed culpa delectus nam suscipit voluptatum minima incidunt illo laudantium provident necessitatibus maiores! Reprehenderit optio excepturi libero quas voluptate, nemo numquam dolor modi, accusamus odit incidunt suscipit amet sed debitis! Ab sint laborum molestiae.</p>   
                 <p>Lorem, ipsum dolor.</p>            
             </div>
             <div id="footer">
