agregue una foto al blog

--- a/blogspot.html
+++ b/blogspot.html
@@ -17,7 +17,7 @@
             <div id="post">
                 <h1>Lorem ipsum dolor sit amet.</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla dolore maiores odit! Exercitationem, dolore? Temporibus odio mollitia earum nostrum iste!!!.</p> 
-                <p><img src="Imagenes/foto.jpg" width="100%"></p>
+                <p><img src="https://i.imgur.com/zIrxKxP.jpg" width="100%"></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic cum consequatur eaque, iusto distinctio numquam molestias sed culpa delectus nam suscipit voluptatum minima incidunt illo laudantium provident necessitatibus maiores! Reprehenderit optio excepturi libero quas voluptate, nemo numquam dolor modi, accusamus odit incidunt suscipit amet sed debitis! Ab sint laborum molestiae.</p>   
                 <p>Lorem, ipsum dolor.</p>            
             </div>
